Further work on mobile theme. Layer structure implemented, lots of input bugs fixed.

--- a/src/plugins/mobile-ui/public/css/style.css
+++ b/src/plugins/mobile-ui/public/css/style.css
@@ -1,26 +1,40 @@
 
 /*Prevent overscroll behaviour, primarily for webapp*/
-html, body {
-  height: 100%;
-  overflow: hidden;
+html, body 
+{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+  
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-body 
+.layer
 {
-	font-family: arial,sans-serif;
-	font-size: 13px;
-	color: #000;
-	background-color: white;
-	padding:0px;
-	margin:0px;
-	text-align:center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	pointer-events:none;
 }
 
-#UI
+.layer > *
 {
-	background-color: white;
+	pointer-events:all;
+}
+
+.layer > .layer
+{
+	pointer-events:none;
+}
+
+.fill 
+{
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 }
 
 .video 
@@ -33,9 +47,12 @@ body
 	height: 100%;
 }
 
-.overlay
+#ui-top
 {
-	position: absolute;
-	top: 0;
-	left: 0;
+    display: -webkit-inline-flex; /* Safari */
+    display: inline-flex;
+    justify-content: space-between;
+    
+    width: 100%;
+    padding: 10px 10px 0px 10px;
 }
